# penaltyparty

./: .gitignore  Dockerfile  README.md  docker-startup.sh  manage.py  pyproject.toml
.github/workflows/: docker-publish.yml
penaltyparty/: asgi.py  settings.py  urls.py  wsgi.py
penaltyparty/pp/: admin.py  apps.py  context_processors.py  loader.py  models.py  urls.py  views.py
penaltyparty/pp/migrations/: 0001_initial.py  0002_alter_testgroup_group_name.py
penaltyparty/pp/templates/: base.html  form.html  index.html  test_attempt_done.html  test_attempt_enter_answer.html  test_attempt_start.html  test_group_create.html  test_group_created_body.txt  test_group_created_subject.txt  test_group_owner.html  test_group_owner_attempt.html
penaltyparty/settings/: __init__.py  dev.py  docker.py
penaltyparty/static/css/: pp.css
static/css/: pp.css
