[tool.poetry]
name = "penaltyparty"
version = "0.1.0"
description = ""
authors = ["Sasha Romijn <github@mxsasha.eu>"]
license = "AGPL"
repository = "https://github.com/mxsasha/penaltyparty"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.3"
django-model-utils = "^5.0.0"
openpyxl = "^3.1.5"
django-honeypot = "^1.2.1"
whitenoise = "^6.8.2"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.252"
isort = "^5.12.0"
black = "23.7.0"
poethepoet = "^0.18.1"

[tool.isort]
profile = "black"
py_version = 38
src_paths = "irrd"

[tool.ruff]
line-length = 110
ignore = ["E501"]
target-version = "py38"

[tool.black]
line-length = 110
target-version = ['py38']
preview = true

[tool.mypy]
ignore_missing_imports = true
install_types = true
non_interactive = true
exclude = ['irrd/vendor/mock_alchemy/']

[tool.poe.tasks]
black = "black penaltyparty"
ruff = "ruff penaltyparty --fix"
isort = "isort penaltyparty"
lint = ["black", "ruff", "isort"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
